@@ -40,6 +40,15 @@ name|java
 operator|.
 name|util
 operator|.
+name|Arrays
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
 name|Set
 import|;
 end_import
@@ -84,6 +93,21 @@ operator|.
 name|core
 operator|.
 name|StopFilter
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|analysis
+operator|.
+name|fr
+operator|.
+name|ElisionFilter
 import|;
 end_import
 begin_import
@@ -244,7 +268,7 @@ name|ItalianStemmer
 import|;
 end_import
 begin_comment
-comment|/**  * {@link Analyzer} for Italian.  */
+comment|/**  * {@link Analyzer} for Italian.  *<p>  *<a name="version"/>  *<p>You must specify the required {@link Version}  * compatibility when creating ItalianAnalyzer:  *<ul>  *<li> As of 3.2, ElisionFilter with a set of Italian   *        contractions is used by default.  *</ul>  */
 end_comment
 begin_class
 DECL|class|ItalianAnalyzer
@@ -273,6 +297,75 @@ name|String
 name|DEFAULT_STOPWORD_FILE
 init|=
 literal|"italian_stop.txt"
+decl_stmt|;
+DECL|field|DEFAULT_ARTICLES
+specifier|private
+specifier|static
+specifier|final
+name|CharArraySet
+name|DEFAULT_ARTICLES
+init|=
+name|CharArraySet
+operator|.
+name|unmodifiableSet
+argument_list|(
+operator|new
+name|CharArraySet
+argument_list|(
+name|Version
+operator|.
+name|LUCENE_CURRENT
+argument_list|,
+name|Arrays
+operator|.
+name|asList
+argument_list|(
+literal|"c"
+argument_list|,
+literal|"l"
+argument_list|,
+literal|"all"
+argument_list|,
+literal|"dall"
+argument_list|,
+literal|"dell"
+argument_list|,
+literal|"nell"
+argument_list|,
+literal|"sull"
+argument_list|,
+literal|"coll"
+argument_list|,
+literal|"pell"
+argument_list|,
+literal|"gl"
+argument_list|,
+literal|"agl"
+argument_list|,
+literal|"dagl"
+argument_list|,
+literal|"degl"
+argument_list|,
+literal|"negl"
+argument_list|,
+literal|"sugl"
+argument_list|,
+literal|"un"
+argument_list|,
+literal|"m"
+argument_list|,
+literal|"t"
+argument_list|,
+literal|"s"
+argument_list|,
+literal|"v"
+argument_list|,
+literal|"d"
+argument_list|)
+argument_list|,
+literal|true
+argument_list|)
+argument_list|)
 decl_stmt|;
 comment|/**    * Returns an unmodifiable instance of the default stop words set.    * @return default stop words set.    */
 DECL|method|getDefaultStopSet
@@ -436,7 +529,7 @@ argument_list|)
 argument_list|)
 expr_stmt|;
 block|}
-comment|/**    * Creates a    * {@link org.apache.lucene.analysis.util.ReusableAnalyzerBase.TokenStreamComponents}    * which tokenizes all the text in the provided {@link Reader}.    *     * @return A    *         {@link org.apache.lucene.analysis.util.ReusableAnalyzerBase.TokenStreamComponents}    *         built from an {@link StandardTokenizer} filtered with    *         {@link StandardFilter}, {@link LowerCaseFilter}, {@link StopFilter}    *         , {@link KeywordMarkerFilter} if a stem exclusion set is    *         provided and {@link SnowballFilter}.    */
+comment|/**    * Creates a    * {@link org.apache.lucene.analysis.util.ReusableAnalyzerBase.TokenStreamComponents}    * which tokenizes all the text in the provided {@link Reader}.    *     * @return A    *         {@link org.apache.lucene.analysis.util.ReusableAnalyzerBase.TokenStreamComponents}    *         built from an {@link StandardTokenizer} filtered with    *         {@link StandardFilter}, {@link ElisionFilter}, {@link LowerCaseFilter}, {@link StopFilter}    *         , {@link KeywordMarkerFilter} if a stem exclusion set is    *         provided and {@link SnowballFilter}.    */
 annotation|@
 name|Override
 DECL|method|createComponents
@@ -474,6 +567,31 @@ argument_list|,
 name|source
 argument_list|)
 decl_stmt|;
+if|if
+condition|(
+name|matchVersion
+operator|.
+name|onOrAfter
+argument_list|(
+name|Version
+operator|.
+name|LUCENE_32
+argument_list|)
+condition|)
+block|{
+name|result
+operator|=
+operator|new
+name|ElisionFilter
+argument_list|(
+name|matchVersion
+argument_list|,
+name|result
+argument_list|,
+name|DEFAULT_ARTICLES
+argument_list|)
+expr_stmt|;
+block|}
 name|result
 operator|=
 operator|new
