@@ -69,6 +69,19 @@ operator|.
 name|BaseTokenStreamTestCase
 import|;
 end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|util
+operator|.
+name|Version
+import|;
+end_import
 begin_class
 DECL|class|TestItalianAnalyzer
 specifier|public
@@ -228,6 +241,102 @@ argument_list|,
 literal|10000
 operator|*
 name|RANDOM_MULTIPLIER
+argument_list|)
+expr_stmt|;
+block|}
+comment|/** test that the elisionfilter is working */
+DECL|method|testContractions
+specifier|public
+name|void
+name|testContractions
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+name|Analyzer
+name|a
+init|=
+operator|new
+name|ItalianAnalyzer
+argument_list|(
+name|TEST_VERSION_CURRENT
+argument_list|)
+decl_stmt|;
+name|assertAnalyzesTo
+argument_list|(
+name|a
+argument_list|,
+literal|"dell'Italia"
+argument_list|,
+operator|new
+name|String
+index|[]
+block|{
+literal|"ital"
+block|}
+argument_list|)
+expr_stmt|;
+name|assertAnalyzesTo
+argument_list|(
+name|a
+argument_list|,
+literal|"l'Italiano"
+argument_list|,
+operator|new
+name|String
+index|[]
+block|{
+literal|"ital"
+block|}
+argument_list|)
+expr_stmt|;
+block|}
+comment|/** test that we don't enable this before 3.2*/
+DECL|method|testContractionsBackwards
+specifier|public
+name|void
+name|testContractionsBackwards
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+name|Analyzer
+name|a
+init|=
+operator|new
+name|ItalianAnalyzer
+argument_list|(
+name|Version
+operator|.
+name|LUCENE_31
+argument_list|)
+decl_stmt|;
+name|assertAnalyzesTo
+argument_list|(
+name|a
+argument_list|,
+literal|"dell'Italia"
+argument_list|,
+operator|new
+name|String
+index|[]
+block|{
+literal|"dell'ital"
+block|}
+argument_list|)
+expr_stmt|;
+name|assertAnalyzesTo
+argument_list|(
+name|a
+argument_list|,
+literal|"l'Italiano"
+argument_list|,
+operator|new
+name|String
+index|[]
+block|{
+literal|"l'ital"
+block|}
 argument_list|)
 expr_stmt|;
 block|}
